# leptosegter

./: .gitignore  Cargo.toml  deploy_static.sh  dev_build.sh  git_auto.sh  vercel.json  vercel_build.sh
.github/workflows/: ci.yml
src/: app.rs  main.rs
src/backend/: pli_segmenter.rs  types.rs
src/components/: input_ui.rs  result_ui.rs
