[package]
name = "leptosegter"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web-Framework
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.14", features = ["csr"] }

# ICU4X (Internationalization) - REMOVED
# icu = { version = "2.1.1", features = ["compiled_data"] }

# Custom Segmentation Dependencies
unicode-segmentation = "1.12.0"
unicode-general-category = "0.6.0"
lazy-regex = "3.3.0"

# Helper
itertools = "0.14.0"
